# aergogen

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
src/aergogen/: __main__.py  bot.py  commands.py
src/aergogen/utils/: asyncio.py  config.py  embed.py
