[project]
name = "aergogen"
version = "0.0.0"
authors = [{name = "James Keal", email = "james@keal.au"}]
requires-python = ">=3.11"

dependencies = [
  "accelerate",
  "diffusers",
  "discord.py",
  "pydantic",
  "pyyaml",
  "safetensors",
  "transformers",
  "peft",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pip-tools",
  "pytest",
  "types-pyyaml",
  "types-tqdm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
